crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__import_sorting.snap
---
source: crates/ruff_linter/src/linter.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 1:1:1
  |
1 | / from pathlib import Path
2 | | import random
3 | | import math
  | |___________^
help: Organize imports
 ::: cell 1
  |
1 + import math
2 + import random
3 | from pathlib import Path
  - import random
  - import math
  |

I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 2:1:1
  |
1 | / from typing import Any
2 | | import collections
  | |__________________^
3 |   # Newline should be added here
4 |   def foo():
help: Organize imports
 ::: cell 2
  |
1 + import collections
2 | from typing import Any
  - import collections
3 +
4 +
5 | # Newline should be added here
  |

I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 3:1:1
  |
1 | / from pathlib import Path
2 | | import sys
  | |__________^
3 |
4 |   %matplotlib \
help: Organize imports
 ::: cell 3
  |
1 + import sys
2 | from pathlib import Path
  - import sys
3 |

I001 [*] Import block is un-sorted or un-formatted
 --> isort.ipynb:cell 3:7:1
  |
5 |       --inline
6 |
7 | / import math
8 | | import abc
  | |__________^
help: Organize imports
 ::: cell 3
  |
6 |
7 + import abc
8 | import math
  - import abc
  |
