crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__ipy_escape_command.snap
---
source: crates/ruff_linter/src/linter.rs
---
F401 [*] `os` imported but unused
 --> ipy_escape_command.ipynb:cell 1:5:8
  |
3 | %matplotlib inline
4 |
5 | import os
  |        ^^
6 |
7 | _ = math.pi
help: Remove unused import: `os`
 ::: cell 1
  |
4 |
  - import os
5 |

F401 [*] `sys` imported but unused
 --> ipy_escape_command.ipynb:cell 2:2:8
  |
1 | %%timeit
2 | import sys
  |        ^^^
help: Remove unused import: `sys`
 ::: cell 2
  |
1 | %%timeit
  - import sys
  |
